Added card overlap and centered ui elements

--- a/app/src/main/java/SmartModerationDesktopApp/MainWindow.form
+++ b/app/src/main/java/SmartModerationDesktopApp/MainWindow.form
@@ -31,12 +31,12 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="760" max="-2" attributes="0"/>
+              <EmptySpace pref="760" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="QRCodeLabel" alignment="2" min="-2" pref="400" max="-2" attributes="0"/>
                   <Component id="QRCode" alignment="2" min="-2" pref="400" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="760" max="-2" attributes="0"/>
+              <EmptySpace pref="760" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -50,7 +50,7 @@
           <Group type="102" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Component id="saveButton" min="-2" pref="53" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="200" max="-2" attributes="0"/>
+              <EmptySpace pref="200" max="32767" attributes="0"/>
               <Component id="QRCodeLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="QRCode" min="-2" pref="400" max="-2" attributes="0"/>
