--- a/app/src/main/java/SmartModerationDesktopApp/Tutorial/Tutorial.form
+++ b/app/src/main/java/SmartModerationDesktopApp/Tutorial/Tutorial.form
@@ -5,6 +5,9 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Login Quick Guide"/>
     <Property name="alwaysOnTop" type="boolean" value="true"/>
+    <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection component="Form" name="iconImage" type="property"/>
+    </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[350, 710]"/>
     </Property>
