--- a/app/src/main/java/SmartModerationDesktopApp/ModerationCards/ModerationCard.form
+++ b/app/src/main/java/SmartModerationDesktopApp/ModerationCards/ModerationCard.form
@@ -69,10 +69,7 @@
               <EmptySpace pref="163" max="32767" attributes="0"/>
               <Component id="authorLabel" min="-2" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="jScrollPane" max="32767" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-          </Group>
+          <Component id="jScrollPane" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
